--- a/config/database.yml
+++ b/config/database.yml
@@ -82,4 +82,4 @@ production:
   <<: *default
   database: gamenight_production
   username: gamenight
-  password: <%= ENV["GAMENIGHT_DATABASE_PASSWORD"] %>
+  password: <%= ENV["SUPABASE_DATABASE_URL"] %>
